# comet

./: .gitattributes  .gitignore  .gitmodules  .npmignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  NEWS.md  README-zh.md  README.md  build.js  codecov.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
eval/: .env.example  CLAUDE.md  README.md  pyproject.toml  report-html-config.json  simulator-instruction.md
eval/langsmith/: .env.example  README.md
eval/langsmith/skills/: README.md
eval/langsmith/tasks/: README.md
eval/langsmith/tests/: conftest.py
eval/langsmith/tests/tasks/: test_tasks.py
eval/langsmith/treatments/: README.md
eval/local/: README.md  regression_baseline.json  report-style-demo.html
eval/local/scripts/: compare_baselines.py  generate_report_style_demo_charts.py  regression_check.py  render_readme_benchmark_figures.py  rescore_rubric.py
eval/local/tasks/: index.yaml
eval/local/tasks/authoring-skill-smoke/: instruction.md  task.toml
eval/local/tasks/comet-agent-memory-routing/: instruction.md  task.toml
eval/local/tasks/comet-api-cache-ttl/: instruction.md  task.toml
eval/local/tasks/comet-cross-file-refactor/: instruction.md  task.toml
eval/local/tasks/comet-dependency-confusion/: instruction.md  task.toml
eval/local/tasks/comet-fix-median/: instruction.md  task.toml
eval/local/tasks/comet-framework-selection/: instruction.md  task.toml
eval/local/tasks/comet-full-workflow/: instruction.md  task.toml
eval/local/tasks/comet-graph-execution-review/: instruction.md  task.toml
eval/local/tasks/comet-hotfix/: instruction.md  task.toml
eval/local/tasks/comet-human-approval-flow/: instruction.md  task.toml
eval/local/tasks/comet-layered-streaming-fix/: instruction.md  task.toml
eval/local/tasks/comet-native-clarification/: instruction.md  task.toml
eval/local/tasks/comet-native-clarification-depth/: instruction.md  task.toml
eval/local/tasks/comet-native-clarification-modes/: instruction.md  task.toml
eval/local/tasks/comet-native-interrupted-transition/: instruction.md  task.toml
eval/local/tasks/comet-native-repository-fact/: instruction.md  task.toml
eval/local/tasks/comet-native-wave-b-decision-resume/: instruction.md  task.toml
eval/local/tasks/comet-native-wave-c-verification-integrity/: instruction.md  task.toml
eval/local/tests/: conftest.py
eval/scaffold/: __init__.py
eval/scaffold/python/: __init__.py  aligned_comparison.py  attribution.py  evidence.py  external_data_handler.py  generic_llm_judge.py  judge_config.py  llm_judge.py  logging.py  manifests.py  native_eval.py  paper_charts.py  pass_at_k.py  paths.py  profiles.py  report_outputs.py  sample_quality.py  schema.py  skill_parser.py  tasks.py  treatments.py  utils.py
eval/scaffold/shell/: common.sh  completion-point.sh  decision-point.sh  docker.sh  run-claude-loop.sh  setup.sh
(+1075 files in other folders)
