[project]
name = "comet-skill-eval"
version = "0.1.0"
description = "Benchmark evaluation for Comet skill (OpenSpec + Superpowers workflow)"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "pytest-xdist>=3.5",
    "pytest-langsmith>=0.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "langsmith>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["local/tests"]
pythonpath = ["."]
markers = [
    "langsmith: marks test as using LangSmith tracing",
]

[tool.ruff]
line-length = 100
target-version = "py311"
